Updated open icon on encoder analyze

--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1233,6 +1233,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -17885,7 +17888,7 @@ then click this button.</property>
                                                             <widget class="GtkImage" id="image_encoder_capture_open1">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="stock">gtk-open</property>
+                                                            <property name="stock">gtk-missing-image</property>
                                                             <property name="icon-size">1</property>
                                                             </widget>
                                                             <packing>
@@ -19656,6 +19659,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
