--- a/glade/preferences_win.glade
+++ b/glade/preferences_win.glade
@@ -2452,6 +2452,52 @@ It starts before and arrives there with some speed.</property>
                             <property name="position">4</property>
                           </packing>
                         </child>
+                        <child>
+                          <widget class="GtkHBox" id="hbox29">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="spacing">10</property>
+                            <child>
+                              <widget class="GtkCheckButton" id="check_encoder_capture_cut_by_triggers">
+                                <property name="label" translatable="yes">Cut sets into repetitions using triggers</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="draw_indicator">True</property>
+                              </widget>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <widget class="GtkButton" id="button_encoder_capture_cut_by_triggers_help">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">True</property>
+                                <signal name="clicked" handler="on_button_encoder_capture_cut_by_triggers_help_clicked" swapped="no"/>
+                                <child>
+                                  <widget class="GtkImage" id="image_encoder_capture_cut_by_triggers_help">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="stock">gtk-missing-image</property>
+                                  </widget>
+                                </child>
+                              </widget>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                          </widget>
+                          <packing>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">5</property>
+                          </packing>
+                        </child>
                       </widget>
                     </child>
                   </widget>
