--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1248,6 +1248,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -7555,7 +7558,6 @@ after time</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="tab_pos">bottom</property>
-                                                            <property name="show_border">False</property>
                                                             <child>
                                                             <widget class="GtkVBox" id="vbox_execute_and_results">
                                                             <property name="visible">True</property>
@@ -10394,7 +10396,7 @@ after time</property>
                                                             <widget class="GtkVBox" id="vbox79">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="border_width">20</property>
+                                                            <property name="border_width">10</property>
                                                             <property name="spacing">10</property>
                                                             <child>
                                                             <widget class="GtkHBox" id="hbox207">
@@ -19654,6 +19656,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
