Arduino nano on chronopicRegister. Rfid reads it.

--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -4619,7 +4619,7 @@ EncoderInertialCapture</property>
                                                             <widget class="GtkLabel" id="label250">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="label" translatable="yes">Chronopics</property>
+                                                            <property name="label" translatable="yes">Board</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">False</property>
@@ -15468,7 +15468,7 @@ Concentric</property>
                                                             <widget class="GtkLabel" id="label132">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="label">Chronopic</property>
+                                                            <property name="label">Board</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">True</property>
